# testcpp

./: CMakeLists.txt  main.cpp
matrix/: CMakeLists.txt  README.md  factory.cpp  main.cpp
matrix/include/: MatrixLibException.hpp  factory.hpp  matrix.hpp  vector.hpp
matrix/tests/: matrix_tests.cc  vector_tests.cc
